--- a/Sokolov/package.json
+++ b/Sokolov/package.json
@@ -14,8 +14,7 @@
   "devDependencies": {
     "jasmine-core": "^2.5.2",
     "karma": "^1.5.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "phantomjs": "^2.1.7"
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0"
   }
 }
