--- a/Sokolov/package.json
+++ b/Sokolov/package.json
@@ -2,7 +2,7 @@
   "name": "basicjs",
   "version": "1.0.0",
   "description": "",
-  "main": "src/main.js",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
