--- a/TypeScript/tsconfig.json
+++ b/TypeScript/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es5",
     "sourceMap": false,
     "outDir": "./dist",
+    "experimentalDecorators": true,
     "watch": true
   },
   "include": [
