Add camp-typescript exercise 002

--- a/Sokolov/tsconfig.json
+++ b/Sokolov/tsconfig.json
@@ -4,6 +4,9 @@
         "target": "es5",
         "noImplicitAny": false,
         "sourceMap": false,
-        "strictNullChecks": true
-    }
+        "experimentalDecorators": true
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
